sample logstash conf

--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -13,8 +13,26 @@ filter {
 }
 
 output {
-  elasticsearch {
-    hosts    => [ 'elasticsearch' ]
+  if "atom" in [tags] {
+    elasticsearch {
+      hosts    => [ 'elasticsearch' ]
+        index    => "atom-index-%{+YYYY.MM}"
+    }
+  } else if "qa" in [tags] {
+    elasticsearch {
+      hosts    => [ 'elasticsearch' ]
+        index    => "qa-index-%{+YYYY.MM}"
+    }
+  } else if "stg" in [tags] {
+    elasticsearch {
+      hosts    => [ 'elasticsearch' ]
+        index    => "stg-index-%{+YYYY.MM}"
+    }
+  } else {
+    elasticsearch {
+      hosts    => [ 'elasticsearch' ]
+        index    => "%{[docker][image]}"
+    }
   }
   stdout { codec => rubydebug }
 }
