index by docker.image and env + date

--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -13,25 +13,20 @@ filter {
 }
 
 output {
-  if "atom" in [tags] {
+  if "qa" in [tags] {
     elasticsearch {
       hosts    => [ 'elasticsearch' ]
-        index    => "atom-index-%{+YYYY.MM}"
-    }
-  } else if "qa" in [tags] {
-    elasticsearch {
-      hosts    => [ 'elasticsearch' ]
-        index    => "qa-index-%{+YYYY.MM}"
+        index    => "qa-%{[docker][image]}-%{+YYYY.MM}"
     }
   } else if "stg" in [tags] {
     elasticsearch {
       hosts    => [ 'elasticsearch' ]
-        index    => "stg-index-%{+YYYY.MM}"
+        index    => "stg-%{[docker][image]}-%{+YYYY.MM}"
     }
   } else {
     elasticsearch {
       hosts    => [ 'elasticsearch' ]
-        index    => "%{[docker][image]}"
+        index    => "%{[docker][image]}-%{+YYYY.MM}"
     }
   }
   stdout { codec => rubydebug }
