use log_name as index name, env required

--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -5,28 +5,25 @@ input {
   }
 }
 
-
 filter {
+  mutate {
+    rename => { "message" => "msg" }
+  }
   if [docker][image] =~ /^logstash/ {
     drop { }
   }
 }
 
 output {
-  if "qa" in [tags] {
+  if ("" in [log_name]) {
     elasticsearch {
       hosts    => [ 'elasticsearch' ]
-        index    => "qa-%{[docker][image]}-%{+YYYY.MM}"
-    }
-  } else if "stg" in [tags] {
-    elasticsearch {
-      hosts    => [ 'elasticsearch' ]
-        index    => "stg-%{[docker][image]}-%{+YYYY.MM}"
+      index    => "%{[env]}-%{[log_name]}-%{+YYYY.MM}"
     }
   } else {
     elasticsearch {
       hosts    => [ 'elasticsearch' ]
-        index    => "%{[docker][image]}-%{+YYYY.MM}"
+      index    => "%{[env]}-%{[docker][image]}-%{+YYYY.MM}"
     }
   }
   stdout { codec => rubydebug }
