add some comments

--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -9,12 +9,21 @@ filter {
   mutate {
     rename => { "message" => "msg" }
   }
+  # drop health check logs
+  if [req][headers][user-agent] =~ /^Consul Health Check/ {
+    drop { }
+  }
+  # drop logstash logs
   if [docker][image] =~ /^logstash/ {
     drop { }
   }
 }
 
 output {
+  # run container with environment variable LOGSTASH_FIELDS="env=test,api=some-api,log_name=logname"
+  # this will prefix each index with the env-
+  # and if there is a log_name it will use that
+  # if not it will default to the docker.image name
   if ("" in [log_name]) {
     elasticsearch {
       hosts    => [ 'elasticsearch' ]
