--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,6 @@
 version: "3"
 services:
+  # elasticsearch + kibana exist in AWS.
   kibana:
     image: docker.elastic.co/kibana/kibana:6.3.2
     environment:
@@ -15,6 +16,7 @@ services:
     ports:
       - 9200:9200
       - 9300:9300
+  # these two can be run in daemon mode on ECS
   logspout:
     image: local/logspout-logstash
     restart: on-failure
