example for aws-es instance

--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -26,12 +26,14 @@ output {
   # if not it will default to the docker.image name
   if ("" in [log_name]) {
     elasticsearch {
-      hosts    => [ 'elasticsearch' ]
+      hosts    => [ 'aws-es-instance-url:443' ]
+      ssl => true
       index    => "%{[env]}-%{[log_name]}-%{+YYYY.MM}"
     }
   } else {
     elasticsearch {
-      hosts    => [ 'elasticsearch' ]
+      hosts    => [ 'aws-es-instance-url:443' ]
+      ssl => true
       index    => "%{[env]}-%{[docker][image]}-%{+YYYY.MM}"
     }
   }
