--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,21 +1,5 @@
 version: "3"
 services:
-  # elasticsearch + kibana exist in AWS.
-  kibana:
-    image: docker.elastic.co/kibana/kibana:6.3.2
-    environment:
-      - 'ELASTICSEARCH_URL=http://elasticsearch:9200'
-      - 'LOGSPOUT=ignore'
-    ports:
-      - 5601:5601
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:6.3.2
-    environment:
-      - 'discovery.type=single-node'
-      - 'LOGSPOUT=ignore'
-    ports:
-      - 9200:9200
-      - 9300:9300
   # these two can be run in daemon mode on ECS
   logspout:
     image: local/logspout-logstash
@@ -31,3 +15,5 @@ services:
       - 'LOGSPOUT=ignore'
     volumes:
       - ./logstash/:/usr/share/logstash/pipeline/
+      # this config needs to change too
+      - ./logstash/yml/logstash.yml:/usr/share/logstash/config/logstash.yml
